# SolidityFlattener

./: .gitignore  Makefile  README.md  dune-project  jooskos-flattener.opam  package.json  replacer.py
src/flattener/: dune  flattener.ml
src/js_flattener/: dune  js_flattener.ml
src/oc_flattener/: dune  oc_flattener.ml
